Expand theme’s repo field

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -14,5 +14,9 @@
     "access": "public"
   },
   "license": "MIT",
-  "repository": "hackclub/theme"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hackclub/theme.git",
+    "directory": "packages/theme"
+  }
 }
