--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@hackclub/theme": "^0.0.1",
-    "theme-ui": "^0.3.0-alpha.6"
+    "theme-ui": "^0.3.0"
   },
   "peerDependencies": {
     "@emotion/core": "^10.0.27",
@@ -35,7 +35,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
-    "theme-ui": "^0.3.0-alpha.6"
+    "theme-ui": "^0.3.0"
   },
   "devDependencies": {
     "react": "^16.12.0",
