--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -7,7 +7,7 @@
   "unpkg": "dist/index.umd.js",
   "sideEffects": false,
   "scripts": {
-    "prepare": "microbundle --no-compress",
+    "prepare": "microbundle",
     "watch": "microbundle watch --no-compress"
   },
   "publishConfig": {
