--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "source": "src/index.js",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
   "sideEffects": false,
   "scripts": {
     "prepare": "rm -rf ./dist && microbundle --jsx React.createElement",
-    "watch": "microbundle watch --external all --jsx React.createElement --no-compress"
+    "watch": "microbundle watch --jsx React.createElement --no-compress"
   },
   "publishConfig": {
     "access": "public"
@@ -25,13 +25,11 @@
     "directory": "packages/components"
   },
   "dependencies": {
-    "@hackclub/theme": "^0.0.1",
-    "theme-ui": "^0.3.0"
+    "@hackclub/icons": "^0.0.3",
+    "@hackclub/theme": "^0.0.1"
   },
   "peerDependencies": {
-    "@emotion/core": "^10.0.27",
     "@hackclub/icons": "^0.0.3",
-    "next": "^9.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
@@ -39,6 +37,7 @@
   },
   "devDependencies": {
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "theme-ui": "^0.3.0"
   }
 }
