--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -9,7 +9,7 @@
   "unpkg": "dist/index.umd.js",
   "sideEffects": false,
   "scripts": {
-    "prepare": "microbundle",
+    "prepare": "microbundle && cp -r src/fonts fonts",
     "watch": "microbundle watch --no-compress"
   },
   "publishConfig": {
