Add Jest testing to meta

--- a/package.json
+++ b/package.json
@@ -3,17 +3,31 @@
   "scripts": {
     "prepare": "lerna run prepare",
     "clean": "lerna run clean",
+    "test": "jest",
     "format": "npx prettier --write \"**/*.js{,on}\" \"**/*.md\"  \"**/*.mdx\""
   },
   "workspaces": {
-    "packages": ["packages/*"]
+    "packages": [
+      "packages/*"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^25.1.0",
+    "jest": "^25.1.0",
     "lerna": "^3.14.1",
     "microbundle": "^0.11.0"
+  },
+  "jest": {
+    "testMatch": [
+      "**/packages/**/test/*.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
