--- a/packages/meta/package.json
+++ b/packages/meta/package.json
@@ -24,6 +24,7 @@
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "react": "^16.12.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
