--- a/packages/meta/package.json
+++ b/packages/meta/package.json
@@ -26,5 +26,6 @@
   "devDependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
-  }
+  },
+  "gitHead": "029e83b336da014076112a68048dfa65565013ee"
 }
