--- a/now.json
+++ b/now.json
@@ -1,5 +1,9 @@
 {
-  "name": "theme",
-  "rewrites": [{ "source": "/(.+)", "destination": "/docs" }],
-  "github": { "silent": true }
+  "version": 2,
+  "public": true,
+  "trailingSlash": true,
+  "github": { "silent": true },
+  "redirects": {
+    { "source": "/gh/", "destination": "https://github.com/hackclub/theme" }
+  }
 }
