Fix typo in now.json

--- a/docs/now.json
+++ b/docs/now.json
@@ -3,7 +3,7 @@
   "public": true,
   "trailingSlash": true,
   "github": { "silent": true },
-  "redirects": {
+  "redirects": [
     { "source": "/gh/", "destination": "https://github.com/hackclub/theme" }
-  }
+  ]
 }
