Add brand page to docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@hackclub/meta": "^0.1.0-alpha.0",
-    "@hackclub/theme": "^0.1.0-alpha.0",
+    "@hackclub/theme": "^0.1.1",
+    "@mdx-js/loader": "^1.5.8",
+    "@next/mdx": "^9.3.5",
     "@theme-ui/style-guide": "^0.3.0",
-    "next": "^9.3.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "lodash": "^4.17.15",
+    "next": "^9.3.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "theme-ui": "^0.3.1"
   }
 }
