--- a/packages/meta/package.json
+++ b/packages/meta/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hackclub/meta",
   "description": "Generate meta tags for Hack Club pages",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.1",
   "source": "src/index.js",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
