--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -7,9 +7,10 @@
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "prepare": "rm -rf ./dist && microbundle",
+    "prepare": "rm -rf ./dist && tsc --project tsconfig.json && microbundle",
     "watch": "microbundle watch --no-compress"
   },
   "publishConfig": {
@@ -21,5 +22,8 @@
     "url": "https://github.com/hackclub/theme.git",
     "directory": "packages/theme"
   },
-  "gitHead": "029e83b336da014076112a68048dfa65565013ee"
+  "gitHead": "029e83b336da014076112a68048dfa65565013ee",
+  "devDependencies": {
+    "typescript": "^3.9.6"
+  }
 }
