--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -3,14 +3,14 @@
   "description": "Hack Club’s theme for Theme UI websites",
   "version": "0.1.1",
   "author": "Lachlan Campbell <lachlan@hackclub.com> (https://lachlanjc.me)",
-  "source": "src/index.js",
+  "source": "src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "prepare": "rm -rf ./dist && tsc --project tsconfig.json && microbundle",
+    "prepare": "rm -rf ./dist && microbundle",
     "watch": "microbundle watch --no-compress"
   },
   "publishConfig": {
@@ -22,8 +22,5 @@
     "url": "https://github.com/hackclub/theme.git",
     "directory": "packages/theme"
   },
-  "gitHead": "029e83b336da014076112a68048dfa65565013ee",
-  "devDependencies": {
-    "typescript": "^3.9.6"
-  }
+  "gitHead": "029e83b336da014076112a68048dfa65565013ee"
 }
