--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -3,10 +3,11 @@
   "description": "Hack Club’s theme for Theme UI websites",
   "version": "0.1.1",
   "author": "Lachlan Campbell <lachlan@hackclub.com> (https://lachlanjc.me)",
-  "source": "src/index.js",
+  "source": "src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "prepare": "rm -rf ./dist && microbundle",
