--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "prepare": "lerna run prepare",
     "clean": "lerna run clean",
     "test": "jest",
-    "fmt": "npx prettier --write \"**/*.js{,on}\" \"**/*.md{,x}\" \"**/*.ts{,x}\""
+    "format": "prettier --write .",
+    "checkFormat": "prettier --check ."
   },
   "workspaces": {
     "packages": [
@@ -20,7 +21,8 @@
     "babel-jest": "^25.1.0",
     "jest": "^25.1.0",
     "lerna": "^3.20.2",
-    "microbundle": "^0.12.0"
+    "microbundle": "^0.12.0",
+    "prettier": "2.0.5"
   },
   "jest": {
     "testMatch": [
